Added support for individual pages for each episode as well as show notes for each episode. This option is disabled by default but can be enabled by selecting it in the Podcast Details tab of the PodcastPage. If selected the show notes field will appear in the popup and the titles and dates on the front end turn into links to those episodes pages.

--- a/css/Podcast.css
+++ b/css/Podcast.css
@@ -49,3 +49,10 @@ p#pagination-links {
 	width: 100%;
 	text-align: center;
 }
+#episode-image{
+	float: right;
+}
+#shownotes{
+	padding-top: 15px;
+	border-top: solid 1px;
+}
